src/monosat/api/Monosat.h

typedef Monosat::SimpSolver* SolverPtr;
typedef Monosat::BVTheorySolver<int64_t>* BVTheoryPtr;
typedef void * SolverPtr;
typedef void *  BVTheoryPtr;
typedef int Var;
const char* getVersion(void);
SolverPtr newSolver(void);
SolverPtr newSolver_arg(const char* argv);
//Java Native Access sometimes has problems with string arrays
SolverPtr newSolver_args(int argc, char** argv);
void deleteSolver(SolverPtr S);
//If set, dump constraints to this file (as they are asserted in the solver)
void setOutputFile(SolverPtr S, const char* output);
//Load a GNF, and run any embedded solve/optimize calls
void readGNF(SolverPtr S, const char* filename);
//Load a GNF, but ignore any embedded solve/optimize calls
void loadGNF(SolverPtr S, const char* filename);
bool solve(SolverPtr S);
bool solveAssumptions(SolverPtr S, int* assumptions, int n_assumptions);
//Solve under assumptions, and also minimize a set of BVs (in order of precedence)
//bool solveAssumptions_MinBVs(SolverPtr S,int * assumptions, int n_assumptions, int * minimize_bvs, int n_minimize_bvs);

// Sets the (approximate) time limit in seconds before returning l_Undef from solveLimited; ignored by solve().
// Set to <=0 to disable time limit.
// Note that setTimeLimit has no effect on OSX.
void setTimeLimit(SolverPtr S, int seconds);
//Sets the maximum number of (additional) conflicts allowed in the solver before returning l_Undef from solveLimited; ignored by solve(). Set to <0 to disable conflict limit.
void setConflictLimit(SolverPtr S, int num_conflicts);
//Sets the maximum number of (additional) propagations allowed in the solver before returning l_Undef from solveLimited; ignored by solve(). Set to <0 to disable propagation limit.
void setPropagationLimit(SolverPtr S, int num_propagations);
//Returns 0 for satisfiable, 1 for proved unsatisfiable, 2 for failed to find a solution (within any resource limits that have been set)
int solveLimited(SolverPtr S);
//Returns 0 for satisfiable, 1 for proved unsatisfiable, 2 for failed to find a solution (within any resource limits that have been set)
int solveAssumptionsLimited(SolverPtr S, int* assumptions, int n_assumptions);
//Solve under assumptions, and also minimize a set of BVs (in order of precedence)
//Returns 0 for satisfiable, 1 for proved unsatisfiable, 2 for failed to find a solution (within any resource limits that have been set)
//int solveAssumptionsLimited_MinBVs(SolverPtr S,int * assumptions, int n_assumptions, int * minimize_bvs, int n_minimize_bvs);

//If the solver is operating with limits on the number of conflicts, memory usage, or runtime (see the setXXXXXLimit() methods), then optimization queries
//are not guaranteed to produce an optimal (or locally optimal) solution.
//This function returns false if the last optimization call to the solver produced a non-optimal result due to such a limit, and true otherwise.
bool lastSolutionWasOptimal(SolverPtr S);
//If the last solution was UNSAT, and assumptions were enforced in the solver, then this get the 'conflict clause' produced by the solver (a subset of the assumptions which are sufficient to cause the instance to be UNSAT).
//Fills the given pointer with the first max_store_size literals of the conflict clause, and returns the number of literals in the conflict clause. Set store_clause to null and max_store_size to 0 to find the size of the conflict clause
//Returns -1 if the solver has no conflict clause from the most recent solve() call (because that call was not UNSAT)
int getConflictClause(SolverPtr S, int* store_clause, int max_store_size);
//Reduce the given set of mutually UNSAT assumptions into a (locally) minimal-sized set of assumptions that are still UNSAT.
//If the assumptions are not UNSAT, this method does returns -1.
//Else, it returns the number of literals in the unsat core, which it will also store in the first number_literals
//entries in unsat_assumptions
//Note: This method will make repeated (and potentially expensive) calls to the SAT solver to attempt to remove literals from the
//set of assumptions.
//Note also that if any of the setXXXXXLimits() are applied to the solver, this may not produce a locally minimal unsat core.
int minimizeUnsatCore(SolverPtr S, int* unsat_assumptions, int n_lits);
//After UNSAT solve calls with assumptions, the solver will find a 'conflict clause' consisting of a subset of the assumptions
//which are sufficient to make the solver UNSAT (see getConflictClause).
//Normally, the conflict clause is produced as a side effect of proving the query unsat, with the solver only removing literals
//from the conflict clause on a best effort basis.
//This method will make repeated (and potentially expensive) calls to the SAT solver to attempt to remove further literals from
//the conflict clause.
//Afterward, the conflict clause can be obtained using getConflictClause().
//NOTE: this function may be expensive, is not required to get a conflict clause; getConflictClause() can be used after any unsat call with assumptions, even
//without calling minimizeConflictClause().
//Note also that if any of the setXXXXXLimits() are applied to the solver, this may not produce a locally minimal conflict clause.
void minimizeConflictClause(SolverPtr S);
//Restart the solver after a solution (this will be done automatically in most circumstances, and so is not usually called)
//This only undoes the decisions made internally by the solver, without removing its variables or constraints.
void backtrack(SolverPtr S);
//Create a new variable in the sat solver, and return that variable.
//Note: Most functions expect a literal, not a variable.
//To convert a variable into a literal, use varToLit(variable)
int newVar(SolverPtr S);
void setDecisionVar(SolverPtr S, int var, bool decidable);
bool isDecisionVar(SolverPtr S, int var);
//Static, lexicographic heuristic. Larger values are higher priority (decided first); default priority is 0
void setDecisionPriority(SolverPtr S, int var, int priority);
int getDecisionPriority(SolverPtr S, int var);
// Which polarity the decision heuristic should use for a variable (by default).
void setDecisionPolarity(SolverPtr S, Var v, bool b);
bool getDecisionPolarity(SolverPtr S, Var v);
//The solver will (sometimes) instantiate an arbitrary true literal for use as a constant.
//Call this method to a) force that literal to be instantiate, and b) get that literal.
int true_lit(SolverPtr S);
//Prevents this literal from being simplified by the preprocessor
bool disallowLiteralSimplification(SolverPtr S, int var);
bool addClause(SolverPtr S, int* lits, int n_lits);
bool addUnitClause(SolverPtr S, int lit);
bool addBinaryClause(SolverPtr S, int lit1, int lit2);
bool addTertiaryClause(SolverPtr S, int lit1, int lit2, int lit3);
//Add n_pairs binary clauses: (first_args[0] OR second_args[0]) AND (first_args[1] OR second_args[1])...
void addBinaryClauses(SolverPtr S, int* first_args, int* second_args, int n_pairs);
//remove any optimization objectives from the solver
void clearOptimizationObjectives(SolverPtr S);
void maximizeBV(SolverPtr S, BVTheoryPtr bv, int bvID);
void minimizeBV(SolverPtr S, BVTheoryPtr bv, int bvID);
void maximizeLits(SolverPtr S, int* lits, int n_lits);
void minimizeLits(SolverPtr S, int* lits, int n_lits);
void maximizeWeightedLits(SolverPtr S, int* lits, int* weights, int n_lits);
void minimizeWeightedLits(SolverPtr S, int* lits, int* weights, int n_lits);
//theory interface for bitvectors
BVTheoryPtr initBVTheory(SolverPtr S);
int newBitvector_anon(SolverPtr S, BVTheoryPtr bv, int bvWidth);
//simple at-most-one constraint: asserts that at most one of the set of variables (NOT LITERALS) may be true.
//for small numbers of variables, consider using a direct CNF encoding instead
void at_most_one(SolverPtr S, int* vars, int n_vars);
void assertPB_lt(SolverPtr S, int rhs, int n_args, int* literals, int* coefficients);
void assertPB_leq(SolverPtr S, int rhs, int n_args, int* literals, int* coefficients);
void assertPB_eq(SolverPtr S, int rhs, int n_args, int* literals, int* coefficients);
void assertPB_geq(SolverPtr S, int rhs, int n_args, int* literals, int* coefficients);
void assertPB_gt(SolverPtr S, int rhs, int n_args, int* literals, int* coefficients);
//Convert any pb constraints in the solver into cnf (will be called automatically before solve())
void flushPB(SolverPtr S);