src/monosat/api/python/monosat/monosat_c.py

# The MIT License (MIT)
#
# Copyright (c) 2014, Sam Bayless
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and
# associated documentation files (the "Software"), to deal in the Software without restriction,
# including without limitation the rights to use, copy, modify, merge, publish, distribute,
# sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all copies or
# substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT
# NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
# DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT
# OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
from __future__ import division
from __future__ import print_function

# Python interface to MonoSAT
# Includes _optional_ support for cython, otherwise falling back on ctypes

import os
import platform
from monosat.singleton import Singleton
from os import path
from enum import Enum
import warnings

module_path = os.path.abspath(path.dirname(__file__))
# If use_cython is true, then monosat will attempt to load the faster cython libraries first, falling back on ctypes if
# the cython interface is not available
# Set use_cython to false to force use of the ctypes api, rather than cython
use_cython = False
try:
    if not use_cython:
        raise Exception("Load ctypes")
    # attempt to load the (faster) Cython interface to monosat.
    # the must have been compiled previously, using setup.py
    # import pyximport
    # pyximport.install()
    import monosat.monosat_p

    print("Using cython interface")


    # cython doesn't use these conversion functions, but ctypes does, so define them as passthroughs if cython is used
    def c_int(x):
        return x


    def c_int64(x):
        return x


    def c_int64(x):
        return x


    def c_bvID(x):
        return x


    def c_bvID_p(x):
        return x


    def c_solver_p(x):
        return x


    def c_uintp(x):
        return x


    def c_intp(x):
        return x


    def c_var(x):
        return x


    def c_var_p(x):
        return x


    def c_bool(x):
        return x


    def c_bv_p(x):
        return x


    def c_fsm_theory_p(x):
        return x


    def c_fsm_p(x):
        return x


    def c_graph_p(x):
        return x


    def c_literal(x):
        return x


    def c_literal_p(x):
        return x


    def c_var(x):
        return x


    def c_var_p(x):
        return x


except:
    use_cython = False
    # Fall back on the cyypes interface
    from ctypes import *

    library_monosat = "libmonosat.so"
    if platform.system() == "Windows":
        library_monosat = "libmonosat.dll"
    elif platform.system() == "Darwin":
        library_monosat = "libmonosat.dylib"
    try:
        try:
            # First try loading monosat from the python library directory
            _monosat_c = cdll.LoadLibrary(os.path.join(module_path, library_monosat))
        except Exception as e:
            # then fall back to loading from the system path
            _monosat_c = cdll.LoadLibrary(library_monosat)
    except Exception as e:
        print("Unable to load libmonosat dynamic library")
        raise e

    # libc = CDLL('libc.so.6')
    null_ptr = POINTER(c_int)()

    c_uint_p = POINTER(c_int)
    c_int_p = POINTER(c_int)

    # Note: longs specified as 64bit on all platforms.
    c_long_p = POINTER(c_int64)
    null_ptr64 = POINTER(c_int64)()

    c_solver_p = POINTER(c_int64)
    c_graph_p = POINTER(c_int64)
    c_bv_p = POINTER(c_int64)
    c_fsm_theory_p = POINTER(c_int64)
    c_fsm_p = POINTER(c_int64)

    c_literal = c_int
    c_literal_p = c_int_p
    c_bvID = c_int
    c_bvID_p = c_int_p
    c_var = c_int
    c_var_p = c_int_p


def dimacs(l):
    assert isinstance(l, int)
    if l & 1:
        return -(l // 2 + 1)
    else:
        return l // 2 + 1


class Ineq(Enum):
    LT = -2
    LEQ = -1
    EQ = 0
    GEQ = 1
    GT = 2


class Solver:

    def __init__(self, monosat_c, arguments=None, output_file=None):
        self.elapsed_time = 0
        if arguments is None:
            arguments = []
        elif isinstance(arguments, str):
            # split this up by whitespace
            arguments = arguments.split()
        self.arguments = arguments
        arr = "monosat " + " ".join(arguments)

        self._ptr = monosat_c.newSolver_arg(bytes(arr, "utf-8"))
        if output_file is not None and len(output_file) > 0:
            monosat_c.setOutputFile(self._ptr, c_char_p(output_file.encode("ascii")))
        self.bvtheory = monosat_c.initBVTheory(self._ptr)
        self.arguments = None
        self.symbolmap = dict()
        self.graphs = []

        self._true = None

    def delete(self):
        Monosat().monosat_c.deleteSolver(self._ptr)
        self._ptr = None
        if Monosat().solver is self:
            Monosat().solver = None


# very simple, low-level python to Monosat's C interface.
class Monosat(metaclass=Singleton):

    def __init__(self):
        self._managers = dict()
        self.elapsed_time = 0
        if use_cython:
            self.monosat_c = monosat.monosat_p
        else:
            self.monosat_c = _monosat_c
            self._int_array = (c_int * (1024))()
            self._int_array2 = (c_int * (1024))()
            self._long_array = (c_int64 * (1024))()
            # Set the return types for each function

            self.monosat_c.getVersion.argtypes = []
            self.monosat_c.getVersion.restype = c_char_p

            self.monosat_c.newSolver.argtypes = []
            self.monosat_c.newSolver.restype = c_solver_p

            self.monosat_c.newSolver_arg.argtypes = [c_char_p]
            self.monosat_c.newSolver_arg.restype = c_solver_p

            self.monosat_c.newSolver_args.argtypes = [c_int, POINTER(c_char_p)]
            self.monosat_c.newSolver_args.restype = c_solver_p

            self.monosat_c.deleteSolver.argtypes = [c_solver_p]

            self.monosat_c.readGNF.argtypes = [c_solver_p, c_char_p]
            self.monosat_c.loadGNF.argtypes = [c_solver_p, c_char_p]

            self.monosat_c.solve.argtypes = [c_solver_p]
            self.monosat_c.solve.restype = c_bool

            self.monosat_c.solveAssumptions.argtypes = [c_solver_p, c_literal_p, c_int]
            self.monosat_c.solveAssumptions.restype = c_bool

            self.monosat_c.solveLimited.argtypes = [c_solver_p]
            self.monosat_c.solveLimited.restype = c_int

            self.monosat_c.solveAssumptionsLimited.argtypes = [
                c_solver_p,
                c_literal_p,
                c_int,
            ]
            self.monosat_c.solveAssumptionsLimited.restype = c_int

            self.monosat_c.lastSolutionWasOptimal.argtypes = [c_solver_p]
            self.monosat_c.lastSolutionWasOptimal.restype = c_bool

            self.monosat_c.getConflictClause.argtypes = [c_solver_p, c_int_p, c_int]
            self.monosat_c.getConflictClause.restype = c_int

            self.monosat_c.minimizeUnsatCore.argtypes = [c_solver_p, c_int_p, c_int]
            self.monosat_c.minimizeUnsatCore.restype = c_int

            self.monosat_c.minimizeConflictClause.argtypes = [c_solver_p]

            self.monosat_c.setTimeLimit.argtypes = [c_solver_p, c_int]

            self.monosat_c.setConflictLimit.argtypes = [c_solver_p, c_int]
            self.monosat_c.setPropagationLimit.argtypes = [c_solver_p, c_int]

            self.monosat_c.backtrack.argtypes = [c_solver_p]

            self.monosat_c.newVar.argtypes = [c_solver_p]
            self.monosat_c.newVar.restype = c_int

            self.monosat_c.setDecisionVar.argtypes = [c_solver_p, c_var, c_bool]

            self.monosat_c.isDecisionVar.argtypes = [c_solver_p, c_var]
            self.monosat_c.isDecisionVar.restype = c_bool

            self.monosat_c.setDecisionPriority.argtypes = [c_solver_p, c_var, c_int]

            self.monosat_c.getDecisionPriority.argtypes = [c_solver_p, c_var]
            self.monosat_c.getDecisionPriority.restype = c_int

            self.monosat_c.setDecisionPolarity.argtypes = [c_solver_p, c_var, c_bool]

            self.monosat_c.getDecisionPolarity.argtypes = [c_solver_p, c_var]
            self.monosat_c.getDecisionPolarity.restype = c_bool

            self.monosat_c.disallowLiteralSimplification.argtypes = [
                c_solver_p,
                c_literal,
            ]
            self.monosat_c.disallowLiteralSimplification.restype = c_bool

            self.monosat_c.addClause.argtypes = [c_solver_p, c_literal_p, c_int]
            self.monosat_c.addClause.restype = c_bool

            self.monosat_c.addUnitClause.argtypes = [c_solver_p, c_literal]
            self.monosat_c.addUnitClause.restype = c_bool

            self.monosat_c.addBinaryClause.argtypes = [c_solver_p, c_literal, c_literal]
            self.monosat_c.addBinaryClause.restype = c_bool

            self.monosat_c.addBinaryClauses.argtypes = [
                c_solver_p,
                c_int_p,
                c_int_p,
                c_int,
            ]

            self.monosat_c.addTertiaryClause.argtypes = [
                c_solver_p,
                c_literal,
                c_literal,
                c_literal,
            ]
            self.monosat_c.addTertiaryClause.restype = c_bool

            self.monosat_c.true_lit.argtypes = [c_solver_p]
            self.monosat_c.true_lit.restype = c_int

            self.monosat_c.clearOptimizationObjectives.argtypes = [c_solver_p]
            self.monosat_c.maximizeBV.argtypes = [c_solver_p, c_bv_p, c_int]
            self.monosat_c.minimizeBV.argtypes = [c_solver_p, c_bv_p, c_int]
            self.monosat_c.maximizeLits.argtypes = [c_solver_p, c_int_p, c_int]
            self.monosat_c.minimizeLits.argtypes = [c_solver_p, c_int_p, c_int]
            self.monosat_c.maximizeWeightedLits.argtypes = [
                c_solver_p,
                c_int_p,
                c_int_p,
                c_int,
            ]
            self.monosat_c.minimizeWeightedLits.argtypes = [
                c_solver_p,
                c_int_p,
                c_int_p,
                c_int,
            ]

            self.monosat_c.at_most_one.argtypes = [c_solver_p, c_var_p, c_int]
            self.monosat_c.assertPB_lt.argtypes = [
                c_solver_p,
                c_int,
                c_int,
                c_int_p,
                c_int_p,
            ]
            self.monosat_c.assertPB_leq.argtypes = [
                c_solver_p,
                c_int,
                c_int,
                c_int_p,
                c_int_p,
            ]
            self.monosat_c.assertPB_eq.argtypes = [
                c_solver_p,
                c_int,
                c_int,
                c_int_p,
                c_int_p,
            ]
            self.monosat_c.assertPB_geq.argtypes = [
                c_solver_p,
                c_int,
                c_int,
                c_int_p,
                c_int_p,
            ]
            self.monosat_c.assertPB_gt.argtypes = [
                c_solver_p,
                c_int,
                c_int,
                c_int_p,
                c_int_p,
            ]
            self.monosat_c.flushPB.argtypes = [c_solver_p]

            self.monosat_c.initBVTheory.argtypes = [c_solver_p]
            self.monosat_c.initBVTheory.restype = c_bv_p

            self.monosat_c.newBitvector_anon.argtypes = [c_solver_p, c_bv_p, c_int]
            self.monosat_c.newBitvector_anon.restype = c_bvID
